--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -49,26 +49,59 @@
 	\begin{tabular}{ l | l | l | l | l }
 		Predator & Prey & Value & Discount Factor & Iterations to converge \\ 
 		\hline
-		(0, 0) & (5, 5) & & 0.8 & \\
-		(2, 3) & (5, 4) & & 0.8 & \\
-		(2, 10) & (10, 0) & & 0.8 & \\
-		(10, 10) & (0, 0) & & 0.8 & \\	
+		(0, 0) & (5, 5) & 0.00335 & 0.8 & 33 \\
+		(2, 3) & (5, 4) & 0.19892 & 0.8 & 33 \\
+		(2, 10) & (10, 0) & 0.19892 & 0.8 & 33 \\
+		(10, 10) & (0, 0) & 1.65066 & 0.8 & 33 \\	
 	\end{tabular}
 \end{center}
+
+
+% Temporarily printing in order to compare 
+
+\begin{center}
+	\begin{tabular}{ l || l }
+		Discount Factor & Iterations to converge \\ 
+		\hline
+		0.1 & 5 \\
+		0.5 & 13 \\
+		0.7 & 22 \\
+		0.9 & 64 \\	
+	\end{tabular}
+\end{center}
+
 
 
 \subsection*{Policy iteration}
 
 % Somehow print the whole grid for Prey(5,5)
 
+% Temporarily printing only these examples in order to compare
+% Iterative policy evaluation and policy iteration yield exactly the same solution (at least for discount factor = 0.8). 
+% Is this expected behavior? 
+
+\begin{center}
+	\begin{tabular}{ l | l | l | l | l }
+		Predator & Prey & Value & Discount Factor & Iterations to converge \\ 
+		\hline
+		(0, 0) & (5, 5) & 0.00335 & 0.8 & 2 \\
+		(2, 3) & (5, 4) & 0.19892 & 0.8 & 2 \\
+		(2, 10) & (10, 0) & 0.19892 & 0.8 & 2 \\
+		(10, 10) & (0, 0) & 1.65066 & 0.8 & 2 \\	
+	\end{tabular}
+\end{center}
+
+% Since it's always 2, maybe it would be interesting to also print the number of iterations it takes for the value grid to 
+% converge for both the policy update iteration
+
 \begin{center}
 	\begin{tabular}{ l || l }
 		Discount Factor & Iterations to converge \\ 
 		\hline
-		0.1 & \\
-		0.5 & \\
-		0.7 & \\
-		0.9 & \\	
+		0.1 & 2 \\
+		0.5 & 2 \\
+		0.7 & 2 \\
+		0.9 & 2 \\	
 	\end{tabular}
 \end{center}
 
@@ -77,14 +110,30 @@
 
 % Somehow print the whole grid for Prey(5,5)
 
+% Temporarily printing only these examples in order to compare
+% Shouldn't the second and third example have the same values like in the previous two methods? 
+% Both are 4 states away from the goal
+
+\begin{center}
+	\begin{tabular}{ l | l | l | l | l }
+		Predator & Prey & Value & Discount Factor & Iterations to converge \\ 
+		\hline
+		(0, 0) & (5, 5) & 0.00000 & 0.8 & 8 \\
+		(2, 3) & (5, 4) & 0.04096 & 0.8 & 8 \\
+		(2, 10) & (10, 0) & 0.00819 & 0.8 & 8 \\
+		(10, 10) & (0, 0) & 0.32000 & 0.8 & 8 \\	
+	\end{tabular}
+\end{center}
+
+
 \begin{center}
 	\begin{tabular}{ l || l }
 		Discount Factor & Iterations to converge \\ 
 		\hline
-		0.1 & \\
-		0.5 & \\
-		0.7 & \\
-		0.9 & \\	
+		0.1 & 1 \\
+		0.5 & 7 \\
+		0.7 & 7 \\
+		0.9 & 8 \\	
 	\end{tabular}
 \end{center}
 
