added average and standard deviation to report

--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -38,7 +38,7 @@
 	\begin{tabular}{  l ||  l }
 		Avarage run time & Standard deviation \\ 
 		\hline
-		 & %avarage run time and standart deviation to be filled here 	
+		296 rounds &  286.580390118 %avarage run time and standart deviation to be filled here 	
 	\end{tabular}
 \end{center}
 
