added value iteration grid

--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -3,6 +3,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{amsmath,amssymb}
 \usepackage{verbatim}
+\usepackage{graphicx}
 
 %\usepackage{soul}
 
@@ -113,17 +114,34 @@
 % Temporarily printing only these examples in order to compare
 % Shouldn't the second and third example have the same values like in the previous two methods? 
 % Both are 4 states away from the goal
+Prey is located at (5, 5)
 
 \begin{center}
-	\begin{tabular}{ l | l | l | l | l }
-		Predator & Prey & Value & Discount Factor & Iterations to converge \\ 
-		\hline
-		(0, 0) & (5, 5) & 0.00000 & 0.8 & 8 \\
-		(2, 3) & (5, 4) & 0.04096 & 0.8 & 8 \\
-		(2, 10) & (10, 0) & 0.00819 & 0.8 & 8 \\
-		(10, 10) & (0, 0) & 0.32000 & 0.8 & 8 \\	
-	\end{tabular}
+\scalebox{0.7}{
+\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
+\hline
+\multicolumn{11}{|c|}{Value Iteration Grid  in loop 8}\\
+\hline
+Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
+
+\hline
+0 & 0.000000 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 & 0.000000 \\
+1 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 \\
+2 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
+3 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
+4 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
+5 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 0.000000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 \\
+6 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
+7 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
+8 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
+9 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 \\
+10 & 0.000000 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 & 0.000000 \\
+\hline
+\end{tabular}
+}
 \end{center}
+
+
 
 
 \begin{center}
