--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath,amssymb}
 \usepackage{verbatim}
 \usepackage{graphicx}
+\usepackage{xcolor,colortbl}
 
 %\usepackage{soul}
 
@@ -44,7 +45,113 @@
 \end{center}
 
 \subsection*{Iterative policy evaluation}
+% Somehow print the whole grid for Prey(5,5)
 
+\begin{center}
+\scalebox{0.7}
+	{
+	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
+	\hline
+	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(0,0), Prey(5,5)}\\
+	\hline
+	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
+
+\hline
+0 & \cellcolor{green!40}0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 \\
+1 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 \\
+2 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 \\
+3 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 \\
+4 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 \\
+5 & 0.033106 & 0.085283 & 0.280822 & 0.991487 & 3.741537 & \cellcolor{red!40}2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 \\
+6 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 \\
+7 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 \\
+8 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 \\
+9 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 \\
+10 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 \\
+\hline
+	\end{tabular}
+	}
+\end{center}
+
+\begin{center}
+\scalebox{0.7}
+	{
+	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
+	\hline
+	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(2,3), Prey(5,4)}\\
+	\hline
+	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
+
+\hline
+0 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 \\
+1 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 \\
+2 & 0.020607 & 0.047865 & 0.105160 & \cellcolor{green!40}0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 \\
+3 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 \\
+4 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 \\
+5 & 0.085283 & 0.280822 & 0.991487 & 3.741537 & \cellcolor{red!40}2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 & 0.033106 \\
+6 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 \\
+7 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 \\
+8 & 0.020607 & 0.047865 & 0.105160 & 0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 \\
+9 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 \\
+10 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 \\
+\hline
+	\end{tabular}
+	}
+\end{center}
+
+\begin{center}
+\scalebox{0.7}
+	{
+	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
+	\hline
+	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(2,10), Prey(10,0)}\\
+	\hline
+	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
+
+\hline
+0 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 \\
+1 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
+2 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & \cellcolor{green!40}0.198928 \\
+3 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
+4 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
+5 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
+6 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
+7 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 \\
+8 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
+9 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 \\
+10 & \cellcolor{red!40}2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 & 0.033106 & 0.085283 & 0.280822 & 0.991487 & 3.741537 \\
+
+\hline
+	\end{tabular}
+	}
+\end{center}
+
+\begin{center}
+\scalebox{0.7}
+	{
+	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
+	\hline
+	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(10,10), Prey(0,0)}\\
+	\hline
+	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
+
+\hline
+0 & \cellcolor{red!40} 2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 & 0.033106 & 0.085283 & 0.280822 & 0.991487 & 3.741537 \\
+1 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 \\
+2 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
+3 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 \\
+4 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
+5 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
+6 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
+7 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
+8 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 \\
+9 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
+10 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & \cellcolor{green!40}1.650667 \\
+
+\hline
+	\end{tabular}
+	}
+\end{center}
 
 \begin{center}
 	\begin{tabular}{ l | l | l | l | l }
@@ -74,8 +181,34 @@
 
 
 \subsection*{Policy iteration}
-
 % Somehow print the whole grid for Prey(5,5)
+\begin{center}
+\scalebox{0.6}
+	{
+		\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
+		\hline
+		\multicolumn{11}{|c|}{Policy Iteration Grid  in loop 3, discount 0.8}\\
+		\hline
+		Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
+
+% readability is non-existent, maybe only keep the policy? (NESWH)
+\hline
+0 & 3.7281  ES &  4.6602  ES &  5.8252  ES &  7.2816  ES &  9.1020  ES &  11.3776  S &  9.1020  WS &  7.2816  WS &  5.8252  WS &  4.6602  WS &  3.7281  WS  \\
+1 & 4.6602  ES &  5.8252  ES &  7.2816  ES &  9.1020  ES &  11.3776  ES &  14.2220  S &  11.3776  WS &  9.1020  WS &  7.2816  WS &  5.8252  WS &  4.6602  WS  \\
+2 & 5.8252  ES &  7.2816  ES &  9.1020  ES &  11.3776  ES &  14.2220  ES &  17.7776  S &  14.2220  WS &  11.3776  WS &  9.1020  WS &  7.2816  WS &  5.8252  WS  \\
+3 & 7.2816  ES &  9.1020  ES &  11.3776  ES &  14.2220  ES &  17.7776  ES &  22.2220  S &  17.7776  WS &  14.2220  WS &  11.3776  WS &  9.1020  WS &  7.2816  WS  \\
+4 & 9.1020  ES &  11.3776  ES &  14.2220  ES &  17.7776  ES &  22.2220  ES &  27.7776  S &  22.2220  WS &  17.7776  WS &  14.2220  WS &  11.3776  WS &  9.1020  WS  \\
+5 & 11.3776  E &  14.2220  E &  17.7776  E &  22.2220  E &  27.7776  E &  \cellcolor{red!40}22.2220  WENS &  27.7776  W &  22.2220  W &  17.7776  W &  14.2220  W &  11.3776  W  \\
+6 & 9.1020  EN &  11.3776  EN &  14.2220  EN &  17.7776  EN &  22.2220  EN &  27.7776  N &  22.2220  WN &  17.7776  WN &  14.2220  WN &  11.3776  WN &  9.1020  WN  \\
+7 & 7.2816  EN &  9.1020  EN &  11.3776  EN &  14.2220  EN &  17.7776  EN &  22.2220  N &  17.7776  WN &  14.2220  WN &  11.3776  WN &  9.1020  WN &  7.2816  WN  \\
+8 & 5.8252  EN &  7.2816  EN &  9.1020  EN &  11.3776  EN &  14.2220  EN &  17.7776  N &  14.2220  WN &  11.3776  WN &  9.1020  WN &  7.2816  WN &  5.8252  WN  \\
+9 & 4.6602  EN &  5.8252  EN &  7.2816  EN &  9.1020  EN &  11.3776  EN &  14.2220  N &  11.3776  WN &  9.1020  WN &  7.2816  WN &  5.8252  WN &  4.6602  WN  \\
+10 & 3.7281  EN &  4.6602  EN &  5.8252  EN &  7.2816  EN &  9.1020  EN &  11.3776  N &  9.1020  WN &  7.2816  WN &  5.8252  WN &  4.6602  WN &  3.7281  WN  \\
+
+
+	\end{tabular}
+	}
+\end{center}
 
 % Temporarily printing only these examples in order to compare
 % Iterative policy evaluation and policy iteration yield exactly the same solution (at least for discount factor = 0.8). 
